@@ -114,7 +114,7 @@
       </table>
     </div>
   </main>
-  <footer>© <a href="mailto:oegehidddema@gmail.com">Oege Hiddema</a> , versie: 17-3-2019 21:13</footer>
+  <footer>© <a href="mailto:oegehidddema@gmail.com">Oege Hiddema</a> , versie: 19-3-2019 21:12</footer>
 </body>
 
 </html>
